--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,7 @@
 ##############################################################################
 # TODO: change libgstplugin.la to something else, e.g. libmysomething.la     #
 ##############################################################################
-plugin_LTLIBRARIES = libgstplugin.la libgstaudiofilterexample.la
+plugin_LTLIBRARIES = libgstavtts.la
 
 ##############################################################################
 # TODO: for the next set of variables, name the prefix if you named the .la, #
@@ -16,7 +16,7 @@ plugin_LTLIBRARIES = libgstplugin.la libgstaudiofilterexample.la
 ## Plugin 1
 
 # sources used to compile this plug-in
-libgstplugin_la_SOURCES = gstplugin.c gstplugin.h
+libgstplugin_la_SOURCES = gstavtdecryptts.c  gstavtdecryptts.h  gstavtts.c
 
 # compiler and linker flags used to compile this plugin, set in configure.ac
 libgstplugin_la_CFLAGS = $(GST_CFLAGS)
@@ -27,13 +27,13 @@ libgstplugin_la_LIBTOOLFLAGS = --tag=disable-static
 ## Plugin 2 (audio filter example)
 
 # sources used to compile this plug-in
-libgstaudiofilterexample_la_SOURCES = gstaudiofilter.c
+#libgstaudiofilterexample_la_SOURCES = gstaudiofilter.c
 
 # compiler and linker flags used to compile this plugin, set in configure.ac
-libgstaudiofilterexample_la_CFLAGS = $(GST_CFLAGS)
-libgstaudiofilterexample_la_LIBADD = $(GST_LIBS)
-libgstaudiofilterexample_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
-libgstaudiofilterexample_la_LIBTOOLFLAGS = --tag=disable-static
+#libgstaudiofilterexample_la_CFLAGS = $(GST_CFLAGS)
+#libgstaudiofilterexample_la_LIBADD = $(GST_LIBS)
+#libgstaudiofilterexample_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+#libgstaudiofilterexample_la_LIBTOOLFLAGS = --tag=disable-static
 
 # headers we need but don't want installed
-noinst_HEADERS = gstplugin.h
+noinst_HEADERS = gstavtdecryptts.h
